--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
-*{
+body{
     font-family: "Montserrat", sans-serif;
+    margin: 0;
+    background-color: #000;
+    color: #fff;
+    overflow: hidden;
+}
 
+.main{
+    display: flex;
+    height: 100vh;
+}
+.sidebar{
+    background-color: #121212;
+    width: 340px;
+    border-radius: 1rem; /* 16px*/
+}
+
+.main-content{
+    background-color: #121212;
+    flex: 1;
+    overflow: auto;
+    border-radius: 1rem; 
+}
+
+.music-player{
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 72px;
 }
