--- a/style.css
+++ b/style.css
@@ -125,3 +125,38 @@ a{
     height: 2rem;
     width: fit-content;
 }
+
+.dark-badge{
+    background-color: #000;
+    color: #fff;
+}
+
+.sticky-nav{
+    display: flex;
+    justify-content: space-between;
+    background-color: #121212;
+    position: sticky;
+    top: 0;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+}
+
+.sticky-nav-icons{
+    margin-left: 0.75rem;
+}
+
+.sticky-nav-options{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-items{
+    margin-right: 1rem;
+}
+
+@media(max-width:1000px){
+    .hide{
+        display: none;
+    }
+}
