--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ a{
     top: 0;
     align-items: center;
     padding: 1rem 0 1rem 0;
+    z-index: 10;
 }
 
 .sticky-nav-icons{
@@ -190,4 +191,18 @@ a{
 .card-info{
     font-size: 0.85rem;
     opacity: 0.8;
+}
+
+.footer{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.line{
+    width: 90%;  
+    height: 50%;
+    border-top: 1px solid white;
+    opacity: 0.4;
 }
