--- a/style.css
+++ b/style.css
@@ -206,3 +206,144 @@ a{
     border-top: 1px solid white;
     opacity: 0.4;
 }
+
+.music-player{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.album{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-around; */
+}
+
+.album img{
+    height: 100%;
+    padding: 1.5rem 0 1rem 1rem;
+}
+
+.album-text{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 0.5rem;
+}
+
+.album-text > div:first-child{
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.album-text > div:nth-child(2){
+    font-size: 0.75rem;
+    opacity: 0.75;
+}
+
+.album-icon{
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.album-icon img{
+    opacity: 0.7;
+}
+.album-icon img:hover{
+    opacity: 1;
+}
+
+.controls{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.controls img{
+    margin-left: 0.5rem;
+    opacity: 0.8;
+}
+.controls img:hover{
+    opacity: 1;
+}
+
+.controls img{
+    height: 2rem;
+}
+
+.player{
+    width: 50%;
+}
+
+.player-controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-control-icon{
+    height: 1rem;
+    margin-right: 1.75rem;
+    opacity: 0.7;
+}
+
+.player-control-icon:hover{
+    opacity: 1;
+}
+
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* 
+.progress-bar{
+    width: 70%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    border-radius: 100px;
+    height: 0.2rem;
+}
+
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    margin-top: -6px;
+} */
+
+.progress-bar {
+  width: 70%;
+  appearance: none;
+  height: 0.2rem;
+  border-radius: 100px;
+  background: linear-gradient(to right, #1bd760 30%, #ddd 30%);
+  cursor: pointer;
+  outline: none;
+}
+
+/* Webkit (Chrome, Edge, Safari) */
+.progress-bar::-webkit-slider-thumb {
+  appearance: none;
+  height: 1rem;
+  width: 1rem;
+  background-color: #1bd760;
+  border-radius: 50%;
+  /* margin-top: -3px; */
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  border: none;
+}
